--- a/resume.html
+++ b/resume.html
@@ -109,21 +109,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>University of Illinois at Urbana-Champaign</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2022 - Dec 2022</h6>
           <p class="w3-text-teal"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>GPA: 3.96</b></p>
-          <p>Web Development! All I need to know in one place</p>
+          <h6 class="w3-text-teal"><b>Master's Degree in Business Analytics</b></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>University of Delhi</b></h5>
+          <h6 class="w3-text-teal"><b>Master's Degree in Political Science</b></p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - May 2019</h6>
-          <p>Master's Degree in Political Science</p>
           <p class="w3-text-teal"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Qualified for Junior Research Fellow</b></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Gandhi Institute of Technology & Management, Visakhapatnam</b></h5>
+          <h6 class="w3-text-teal"><b>Bachelor's Degree in Computer Science</b></p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2007 - May 2011</h6>
-           <p class="w3-text-teal"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>GPA: 8.50</b></p>
-           <p class="w3-text-teal"><b>Bachelor's Degree in Computer Science</b></p>
+          <p class="w3-text-teal"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>GPA: 8.50</b></p>
+           
         </div>
       </div>
 
