--- a/resume.html
+++ b/resume.html
@@ -24,14 +24,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="ProfilePic2.jpg" style="width:100%" alt="Avatar">
-          <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2></h2>
-            <h2></h2>
-            <h2>Abhinay Yarlagadda</h2>
+          <img src="Profile_Pic.jpg" style="width:100%" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-black">  
           </div>
         </div>
         <div class="w3-container">
+          <h2>Abhinay Yarlagadda</h2>
           <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Data Scientist</p>
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Chicago Area, Illinois</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>Abhinay.Yarlagadda@gmail.com</p>
