--- a/resume.html
+++ b/resume.html
@@ -125,7 +125,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>University of Delhi</b></h5>
           <h6 class="w3-text-teal"><b>Master's Degree in Political Science</b></p>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2017 - May 2019</h6>
-          <p class="w3-text-teal"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Qualified for Junior Research Fellow</b></p>
+          <p class="w3-text-teal"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Qualified for Junior Research Fellowship</b></p>
           <hr>
         </div>
         <div class="w3-container">
