--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
           <hr>
 
-          <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Domain Knowledge</b></p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Domain Knowledge</p>
           <p>Finance & Web3</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%"></div>
@@ -113,16 +113,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <h5 class="w3-opacity"><b>Equity Research Analyst Designer @ Self-Employed</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2015 - Jul 2017</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Business Analyst @ LSI</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>May 2013 - May 2014</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Business Intelligence Developer @ AVIVA UK General Insurance</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jul 2011 - May 2013</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <hr>
         </div>
         
       </div>
