--- a/resume.html
+++ b/resume.html
@@ -58,7 +58,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <br>
           <hr>
 
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Domain Knowledge</p>
+          <p class="w3-large w3-text-theme"><b><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Domain Knowledge</b></p>
           <p>Finance & Web3</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%"></div>
