--- a/resume.html
+++ b/resume.html
@@ -59,17 +59,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
 
           <p class="w3-large w3-text-theme"><b><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Domain Knowledge</b></p>
-          <p>Finance & Web3</p>
+          <p>Banking, Finance & Web3</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:90%"></div>
           </div>
+          <p>Insurance</p>
+          <div class="w3-light-grey w3-round-xlarge">
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+          </div>
           <p>Marketing</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:85%"></div>
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
           </div>
           <p>Supply Chain</p>
           <div class="w3-light-grey w3-round-xlarge">
-            <div class="w3-round-xlarge w3-teal" style="height:24px;width:80%"></div>
+            <div class="w3-round-xlarge w3-teal" style="height:24px;width:75%"></div>
           </div>
           <hr>
           
