--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="w3-padding-64">
       <a href="#" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Home</a>
       <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Resume</a>
+      <a href="https://whyabhinay.github.io/portfolio.io/resume.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Resume</a>
       <a href="#contact" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Contact</a>
     </div>
   </div>
