--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
       <h1>Abhinay Yarlagadda's Blog</h1>
     </div>
     <div class="w3-padding-64">
-      <a href="#" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Home</a>
-      <a href="#work" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
+      <a href="https://whyabhinay.github.io/portfolio.io/index.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Home</a>
+      <a href="https://whyabhinay.github.io/portfolio.io/work.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
       <a href="https://whyabhinay.github.io/portfolio.io/resume.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Resume</a>
-      <a href="#contact" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Contact</a>
     </div>
   </div>
   <div class="w3-half w3-blue-grey w3-container" style="height:700px">
