--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="https://whyabhinay.github.io/portfolio.io/resume.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Resume</a>
     </div>
   </div>
-  <div class="w3-half w3-blue-grey w3-container" style="height:700px">
+  <div class="w3-half w3-teal w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <img src="About.jpeg" class="w3-margin w3-circle" alt="Person" style="width:50%">
