--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="w3-half w3-teal w3-container" style="height:700px">
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
-      <div class="w3-left-align w3-padding-large">
+      <div class="w3-center-align w3-padding-large">
         <p>I am Abhi</p>
       </div>
     </div>
