--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>Abhinay Yarlagadda's Blog</h1>
-      <img src="logo.jpeg" class="w3-margin w3-square" alt="Logo" style="width:50%">
+      <h1>Abhinay Yarlagadda's Blog <img src="logo.jpeg" class="w3-margin w3-square" alt="Logo" style="width:50%"></h1>
+      
       <a href="https://whyabhinay.github.io/portfolio.io/index.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Home</a>
       <a href="https://whyabhinay.github.io/portfolio.io/work.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
       <a href="https://whyabhinay.github.io/portfolio.io/resume.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Resume</a>
@@ -23,7 +23,7 @@
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <div class="w3-center-align w3-padding-large">
-        <p>I am Abhi</p>
+        <p>As someone with a pedigree in Computer Science, Social Science & Business Administration</p>
       </div>
     </div>
   </div>
