--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="w3-padding-64 w3-center">
       <h1>About Me</h1>
       <div class="w3-center-align w3-padding-large">
-        <p>As someone with a pedigree in Computer Science, Political Science & Business Administration, I am well equipped to perform analytical research on topics that require multidisciplinary efforts</p>
+        <p>As someone with a pedigree in Computer Science, Political Science & Business Administration, I am well equipped to perform analytical research on topics that require multidisciplinary efforts. Test</p>
       </div>
     </div>
   </div>
