--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div class="w3-row">
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
-      <h1>Abhinay Yarlagadda's Blog <img src="logo.jpeg" class="w3-margin w3-square" alt="Logo" style="width:50%"></h1>
+      <h1><u>Abhinay Yarlagadda's Blog </u></h1>
+      <img src="logo.jpeg" class="w3-margin w3-square" width="100" height="100">
       
       <a href="https://whyabhinay.github.io/portfolio.io/index.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Home</a>
       <a href="https://whyabhinay.github.io/portfolio.io/work.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">My Work</a>
