--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div class="w3-half w3-black w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
       <div class="w3-row">
-        <div class="w3-column"><h1><u>Abhinay Yarlagadda's Blog</u></h1></div>
+        <div class="w3-column"><h1>Abhinay Yarlagadda's Blog</h1></div>
         <div class="w3-column"><img src="logo.jpeg" class="w3-margin w3-square" width="100" height="100"></div>
       </div>
       <a href="https://whyabhinay.github.io/portfolio.io/index.html" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Home</a>
